--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y python3-venv python3-pip git
 
+          # Configure git
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
           # Create application directory if it doesn't exist
           mkdir -p /home/ubuntu/legal-ai-app
           cd /home/ubuntu/legal-ai-app
