--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,4 +2,7 @@ fastapi==0.109.2
 uvicorn==0.27.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
-google-genai==1.15.0 
+google-genai==1.15.0
+crewai==0.11.0
+setuptools>=69.0.3
+langchain-google-genai>=0.0.5 
