--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,22 +35,9 @@ jobs:
           
           # Install Python 3.12 and its dependencies
           sudo yum update -y
-          sudo yum groupinstall -y "Development Tools"
-          sudo yum install -y openssl-devel bzip2-devel libffi-devel xz-devel
-          
-          # Check if Python 3.12 is already installed
-          if ! command -v python3.12 &> /dev/null; then
-            echo "Installing Python 3.12..."
-            cd /tmp
-            wget https://www.python.org/ftp/python/3.12.2/Python-3.12.2.tgz
-            tar xzf Python-3.12.2.tgz
-            cd Python-3.12.2
-            ./configure --enable-optimizations --with-system-ffi
-            sudo make altinstall
-            cd ~
-          else
-            echo "Python 3.12 is already installed"
-          fi
+          sudo yum install -y amazon-linux-extras
+          sudo amazon-linux-extras enable python3.12
+          sudo yum install -y python3.12 python3.12-pip python3.12-devel
           
           # Install Rust only if not already installed
           if ! command -v rustc &> /dev/null; then
@@ -72,7 +59,7 @@ jobs:
           rm -rf ~/venv
           
           # Set up new virtual environment with Python 3.12
-          /usr/local/bin/python3.12 -m venv ~/venv
+          python3.12 -m venv ~/venv
           
           # Activate virtual environment and verify Python version
           source ~/venv/bin/activate
