--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main  # or master, depending on your default branch
+      - main
     paths:
       - 'backend/**'
       - '.github/workflows/deploy.yml'
@@ -30,57 +30,27 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         timeout: 30m
         script: |
-          # Install git if not installed
-          which git || sudo yum install -y git
-          
-          # Install Python 3.12 and its dependencies
+          # Install Python 3.12
           sudo yum update -y
           sudo yum install -y amazon-linux-extras
           sudo amazon-linux-extras enable python3.12
           sudo yum install -y python3.12 python3.12-pip python3.12-devel
           
-          # Install Rust only if not already installed
-          if ! command -v rustc &> /dev/null; then
-            echo "Installing Rust..."
-            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-            source "$HOME/.cargo/env"
-          else
-            echo "Rust is already installed"
-          fi
-          
-          # Clean up previous deployment if it exists
+          # Clean up and clone repository
           rm -rf ~/legal-ai-app
-          
-          # Clone the repository
           git clone https://github.com/avalon109/legal-ai-app.git ~/legal-ai-app
           cd ~/legal-ai-app
           
-          # Remove existing venv if it exists
+          # Create fresh virtual environment
           rm -rf ~/venv
-          
-          # Set up new virtual environment with Python 3.12
           python3.12 -m venv ~/venv
-          
-          # Activate virtual environment and verify Python version
           source ~/venv/bin/activate
-          echo "Python version:"
-          python --version
           
-          # Upgrade pip and install wheel
+          # Install requirements
           python -m pip install --upgrade pip
-          python -m pip install wheel
+          python -m pip install -r backend/requirements.txt
           
-          # Install requirements with no cache
-          if [ -f requirements.txt ]; then
-            python -m pip install --no-cache-dir -r requirements.txt
-          elif [ -f backend/requirements.txt ]; then
-            python -m pip install --no-cache-dir -r backend/requirements.txt
-          fi
-          
-          # Verify crewai installation
-          python -c "import crewai; print('crewai version:', crewai.__version__)"
-          
-          # Create or update systemd service file
+          # Create systemd service
           cat > ~/legal-ai-app.service << 'EOL'
           [Unit]
           Description=Legal AI Application
@@ -89,7 +59,7 @@ jobs:
           [Service]
           User=ec2-user
           WorkingDirectory=/home/ec2-user/legal-ai-app/backend
-          Environment="PATH=/home/ec2-user/venv/bin:/home/ec2-user/.cargo/bin"
+          Environment="PATH=/home/ec2-user/venv/bin"
           Environment="GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}"
           ExecStart=/home/ec2-user/venv/bin/python /home/ec2-user/legal-ai-app/backend/main.py
           Restart=always
@@ -101,43 +71,23 @@ jobs:
           WantedBy=multi-user.target
           EOL
           
-          # Move service file to systemd directory and set permissions
+          # Setup service
           sudo mv ~/legal-ai-app.service /etc/systemd/system/
           sudo chmod 644 /etc/systemd/system/legal-ai-app.service
-          
-          # Create log files and set permissions
           sudo touch /var/log/legal-ai-app.log /var/log/legal-ai-app.error.log
           sudo chown ec2-user:ec2-user /var/log/legal-ai-app.log /var/log/legal-ai-app.error.log
           
-          # Stop the service if it's running
-          sudo systemctl stop legal-ai-app.service || true
-          
-          # Reload systemd, enable and restart service
+          # Start service
           sudo systemctl daemon-reload
           sudo systemctl enable legal-ai-app.service
           sudo systemctl restart legal-ai-app.service
           
-          # Wait for service to start
+          # Wait and check status
           sleep 5
-          
-          # Check if service is running
           sudo systemctl status legal-ai-app.service
           
-          # Show the last few lines of the logs
+          # Show logs
           echo "=== Application Logs ==="
           sudo tail -n 20 /var/log/legal-ai-app.log
           echo "=== Error Logs ==="
           sudo tail -n 20 /var/log/legal-ai-app.error.log
-          
-          # Verify the service is actually running
-          if ! sudo systemctl is-active --quiet legal-ai-app.service; then
-            echo "Service failed to start. Checking logs for errors..."
-            sudo journalctl -u legal-ai-app.service -n 50
-            exit 1
-          fi
-          
-          # Test the endpoint
-          echo "Testing endpoint..."
-          curl -s http://localhost:8000/ || echo "Endpoint test failed"
-          
-          echo "Deployment completed"
