--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,9 @@ jobs:
           
           # Install requirements
           python -m pip install --upgrade pip
-          python -m pip install -r backend/requirements.txt
+          cd backend
+          python -m pip install -r requirements.txt
+          cd ..
           
           # Create systemd service
           cat > ~/legal-ai-app.service << 'EOL'
