--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel # Ensure pip and build tools are up to date
           cd backend
           ls -la  # Debug: show files in backend directory
-          python -m pip install --default-timeout=2000 -v -r requirements.txt
+          python -m pip install -v --prefer-binary --timeout 60 --default-timeout=60 -r requirements.txt
           echo "TIMESTAMP: $(date) - Finished pip install"
           cd ..
           
