--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,94 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+crewai==0.11.0
+dataclasses-json==0.6.7
+Deprecated==1.2.18
+distro==1.9.0
+docstring-parser==0.15
 fastapi==0.109.2
-uvicorn==0.27.1
+frozenlist==1.6.0
+google-ai-generativelanguage==0.6.4
+google-api-core==2.25.0rc1
+google-api-python-client==2.169.0
+google-auth==2.40.1
+google-auth-httplib2==0.2.0
+google-genai==1.15.0
+google-generativeai==0.5.4
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+grpcio-status==1.62.3
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+idna==3.10
+importlib_metadata==8.4.0
+instructor==0.5.2
+jiter==0.9.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.1.20
+langchain-community==0.0.38
+langchain-core==0.1.53
+langchain-google-genai==1.0.4
+langchain-openai==0.0.2.post1
+langchain-text-splitters==0.0.2
+langsmith==0.1.147
+markdown-it-py==3.0.0
+marshmallow==3.26.1
+mdurl==0.1.2
+multidict==6.4.3
+mypy_extensions==1.1.0
+numpy==1.26.4
+openai==1.79.0
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-http==1.27.0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+orjson==3.10.18
+packaging==23.2
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==4.25.7
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.4
+pydantic_core==2.33.2
+Pygments==2.19.1
+pyparsing==3.2.3
 python-dotenv==1.0.1
 python-multipart==0.0.9
-google-genai==1.15.0
-crewai==0.11.0
-setuptools>=69.0.3
-langchain-google-genai>=0.0.5
+PyYAML==6.0.2
+regex==2023.12.25
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rsa==4.9.1
+setuptools==80.7.1
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.36.3
+tenacity==8.5.0
+tiktoken==0.5.2
+tqdm==4.67.1
+typer==0.9.4
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uritemplate==4.1.1
+urllib3==2.4.0
+uvicorn==0.27.1
+websockets==15.0.1
+wrapt==1.17.2
+yarl==1.20.0
+zipp==3.21.0
