--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,18 +3,37 @@ aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+appdirs==1.4.4
+asgiref==3.8.1
+asttokens==3.0.0
 attrs==25.3.0
+auth0-python==4.9.0
+backoff==2.2.1
+bcrypt==4.3.0
+blinker==1.9.0
+build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
+chromadb==1.0.9
 click==8.2.0
-crewai==0.11.0
+coloredlogs==15.0.1
+crewai==0.120.1
+cryptography==45.0.2
 dataclasses-json==0.6.7
+decorator==5.2.1
 Deprecated==1.2.18
 distro==1.9.0
-docstring-parser==0.15
-fastapi==0.109.2
+docstring_parser==0.16
+durationpy==0.10
+et_xmlfile==2.0.0
+executing==2.2.0
+fastapi==0.115.9
+filelock==3.18.0
+flatbuffers==25.2.10
 frozenlist==1.6.0
+fsspec==2025.3.2
 google-ai-generativelanguage==0.6.4
 google-api-core==2.25.0rc1
 google-api-python-client==2.169.0
@@ -28,13 +47,28 @@ grpcio-status==1.62.3
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.22.0
+httptools==0.6.4
 httpx==0.28.1
+huggingface-hub==0.31.2
+humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.4.0
-instructor==0.5.2
-jiter==0.9.0
+importlib_resources==6.5.2
+instructor==1.8.2
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.8.2
+json5==0.12.0
+json_repair==0.44.1
 jsonpatch==1.33
+jsonpickle==4.0.5
 jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kubernetes==32.0.1
 langchain==0.1.20
 langchain-community==0.0.38
 langchain-core==0.1.53
@@ -42,52 +76,98 @@ langchain-google-genai==1.0.4
 langchain-openai==0.0.2.post1
 langchain-text-splitters==0.0.2
 langsmith==0.1.147
+litellm==1.68.0
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mmh3==5.1.0
+mpmath==1.3.0
 multidict==6.4.3
 mypy_extensions==1.1.0
+networkx==3.4.2
 numpy==1.26.4
-openai==1.79.0
-opentelemetry-api==1.27.0
-opentelemetry-exporter-otlp-proto-common==1.27.0
-opentelemetry-exporter-otlp-proto-http==1.27.0
-opentelemetry-proto==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
+oauthlib==3.2.2
+onnxruntime==1.22.0
+openai==1.75.0
+openpyxl==3.1.5
+opentelemetry-api==1.33.1
+opentelemetry-exporter-otlp-proto-common==1.33.1
+opentelemetry-exporter-otlp-proto-grpc==1.33.1
+opentelemetry-exporter-otlp-proto-http==1.33.1
+opentelemetry-instrumentation==0.54b1
+opentelemetry-instrumentation-asgi==0.54b1
+opentelemetry-instrumentation-fastapi==0.54b1
+opentelemetry-proto==1.33.1
+opentelemetry-sdk==1.33.1
+opentelemetry-semantic-conventions==0.54b1
+opentelemetry-util-http==0.54b1
 orjson==3.10.18
+overrides==7.7.0
 packaging==23.2
+parso==0.8.4
+pdfminer.six==20250327
+pdfplumber==0.11.6
+pexpect==4.9.0
+pillow==11.2.1
+posthog==4.0.1
+prompt_toolkit==3.0.51
 propcache==0.3.1
 proto-plus==1.26.1
-protobuf==4.25.7
+protobuf==5.29.4
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
 Pygments==2.19.1
+PyJWT==2.10.1
 pyparsing==3.2.3
+pypdfium2==4.30.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pyvis==0.3.2
 PyYAML==6.0.2
-regex==2023.12.25
+referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
+rpds-py==0.25.0
 rsa==4.9.1
 setuptools==80.7.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
-starlette==0.36.3
-tenacity==8.5.0
-tiktoken==0.5.2
+stack-data==0.6.3
+starlette==0.45.3
+sympy==1.14.0
+tenacity==9.1.2
+tiktoken==0.9.0
+tokenizers==0.21.1
+tomli==2.2.1
+tomli_w==1.2.0
 tqdm==4.67.1
+traitlets==5.14.3
 typer==0.9.4
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
+uv==0.7.5
 uvicorn==0.27.1
+uvloop==0.21.0
+watchfiles==1.0.5
+wcwidth==0.2.13
+websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
 yarl==1.20.0
